# CV

canny/: CMakeLists.txt  canny.cpp
canny/include/: canny.h
canny/src/: canny.cpp  main.cpp
harris/: CMakeLists.txt
harris/include/: harris.h
harris/src/: harris.cpp  main.cpp
